--- a/hplayer.html
+++ b/hplayer.html
@@ -1,1 +1,1 @@
-<style>*{margin:0;padding:0;background:#000;color:#fff}</style><body></body><script src="https://iamcdn.net/players/embed.js"></script>
+<style>*{margin:0;padding:0;background:#000;color:#fff}</style><body></body><script src="https://movies.xtapo.com/assets/js/hplayer.js"></script>
